@@ -10,22 +10,16 @@ import com.google.common.collect.ImmutableMap;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.BeanWrapper;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.jdbc.core.BeanPropertyRowMapper;
 import org.springframework.jdbc.core.ColumnMapRowMapper;
 import org.springframework.stereotype.Service;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
-
-/**
- * Created by randanunn on 2019-05-20.
- * !Describe Purpose!
- */
+/** Created by randanunn on 2019-05-20. !Describe Purpose! */
 @Slf4j
 @Service
-@RequiredArgsConstructor(onConstructor = @__(@Autowired))
+@RequiredArgsConstructor
 public class EventService {
 
   private final SqlCache sqlCache;
@@ -34,23 +28,21 @@ public class EventService {
 
   public List<Event> getEventsForCompany() {
     User user = securityService.getCurrentUser();
-    HashMap<String, Object> params = new HashMap<>();
+    Map<String, Object> params = new HashMap<>();
     params.put("companyId", user.getCompanyId());
-    List<Event> results = sqlCache.query("event.getAllForCompany", params, Event.class);
-    return results;
+    return sqlCache.query("event.getAllForCompany", params, Event.class);
   }
 
   public Event getEvent(Long id) {
-    HashMap<String, Object> params = new HashMap<>();
+    Map<String, Object> params = new HashMap<>();
     params.put("id", id);
-    Optional<Event> result = sqlCache.get("event.get", params,  new EventMapper<>(Event.class, om));
-    return result.orElse(null);
+    return sqlCache.get("event.get", params, new EventMapper<>(Event.class, om)).orElse(null);
   }
 
   public void saveChangesToDefaultFields(Long id, Event event) {
     User currentUser = securityService.getCurrentUser();
 
-    HashMap<String, Object> params = new HashMap<>();
+    Map<String, Object> params = new HashMap<>();
     params.put("id", id);
     params.put("modifiedById", currentUser.trueUserId());
     params.put("resourceCustomFieldId", event.getResourceCustomFieldId());
@@ -63,7 +55,7 @@ public class EventService {
   public void deleteEvent(Long id) {
     User currentUser = securityService.getCurrentUser();
 
-    HashMap<String, Object> params = new HashMap<>();
+    Map<String, Object> params = new HashMap<>();
     params.put("eventId", id);
     params.put("modifiedById", currentUser.trueUserId());
 
@@ -72,7 +64,7 @@ public class EventService {
 
   public void updateEvent(Event event) {
     User currentUser = securityService.getCurrentUser();
-    HashMap<String, Object> params = new HashMap<>();
+    Map<String, Object> params = new HashMap<>();
     params.put("id", event.getId());
     params.put("modifiedById", currentUser.trueUserId());
     params.put("name", event.getEventName());
@@ -81,7 +73,7 @@ public class EventService {
 
   public Event insertEvent(Event event) {
     User currentUser = securityService.getCurrentUser();
-    HashMap<String, Object> params = new HashMap<>();
+    Map<String, Object> params = new HashMap<>();
     params.put("companyId", currentUser.getCompanyId());
     params.put("createdById", currentUser.trueUserId());
     params.put("name", event.getEventName());
@@ -92,55 +84,53 @@ public class EventService {
   }
 
   public List<EventStatusType> getEventStatuses() {
-    List<EventStatusType> results = sqlCache.query("event.getStatuses", Collections.emptyMap(), EventStatusType.class);
-
-    return results;
+    return sqlCache.query("event.getStatuses", Collections.emptyMap(), EventStatusType.class);
   }
 
   public List<WorkQueueTypeEventStatus> getStatusesForWqt(Long processStepId, Long eventId) {
     User user = securityService.getCurrentUser();
 
-    HashMap<String, Object> params = new HashMap<>();
+    Map<String, Object> params = new HashMap<>();
     params.put("companyId", user.getCompanyId());
     params.put("processStepId", processStepId);
     params.put("eventId", eventId);
-    List<WorkQueueTypeEventStatus> results = sqlCache.query("event.getStatusesForWqt", params, WorkQueueTypeEventStatus.class);
-    return results;
+    return sqlCache.query("event.getStatusesForWqt", params, WorkQueueTypeEventStatus.class);
   }
 
   public List<CompanyEventStatusType> getAssignedEventStatuses(Long eventId) {
-    HashMap<String, Object> params = new HashMap<>();
+    Map<String, Object> params = new HashMap<>();
     params.put("eventId", eventId);
-    List<CompanyEventStatusType> results = sqlCache.query("event.getAssignedStatuses", params, CompanyEventStatusType.class);
 
-    return results;
+    return sqlCache.query("event.getAssignedStatuses", params, CompanyEventStatusType.class);
   }
 
   public List<ListOfValue> getAssignedEventStatusesByListOfValue(Long eventId) {
     final Long companyId = securityService.getCurrentUser().getCompanyId();
-    return sqlCache.query("event.getAssignedEventStatusesByListOfValue", Map.of("eventId", eventId, "companyId", companyId), ListOfValue.class);
+    return sqlCache.query(
+        "event.getAssignedEventStatusesByListOfValue",
+        Map.of("eventId", eventId, "companyId", companyId),
+        ListOfValue.class);
   }
 
   public List<ListOfValue> getAssignedEventCategoriesByListOfValue(Long eventId) {
     final Long companyId = securityService.getCurrentUser().getCompanyId();
-    return sqlCache.query("event.getAssignedEventCategoriesByListOfValue", Map.of("eventId", eventId, "companyId", companyId), ListOfValue.class);
+    return sqlCache.query(
+        "event.getAssignedEventCategoriesByListOfValue",
+        Map.of("eventId", eventId, "companyId", companyId),
+        ListOfValue.class);
   }
 
   public List<EventStatusType> getCompanyEventStatuses() {
     User currentUser = securityService.getCurrentUser();
     Long companyId = currentUser.getCompanyId();
 
-    List<EventStatusType> results = sqlCache.query("event.getCompanyStatuses",
-      ImmutableMap.of("companyId", companyId), EventStatusType.class);
-
-    return results;
+    return sqlCache.query(
+        "event.getCompanyStatuses", ImmutableMap.of("companyId", companyId), EventStatusType.class);
   }
 
   public Optional<EventStatusType> getOneCompanyEventStatusType(Long id) {
-    Optional<EventStatusType> result = sqlCache.get("event.getOneCompanyStatus",
-      ImmutableMap.of("id", id), EventStatusType.class);
-
-    return result;
+    return sqlCache.get(
+        "event.getOneCompanyStatus", ImmutableMap.of("id", id), EventStatusType.class);
   }
 
   public void saveCompanyEventStatuses(List<EventStatusType> statuses) {
@@ -151,14 +141,14 @@ public class EventService {
 
   public Optional<EventStatusType> saveCompanyEventStatus(EventStatusType status) {
     User currentUser = securityService.getCurrentUser();
-    HashMap<String, Object> params = new HashMap<>();
+    Map<String, Object> params = new HashMap<>();
     params.put("currentUserId", currentUser.trueUserId());
     params.put("rootEventStatusTypeId", status.getEventStatusTypeId());
     params.put("eventStatusType", status.getEventStatusType());
     params.put("companyId", currentUser.getCompanyId());
     Long id;
 
-    if(null != status.getId()) {
+    if (null != status.getId()) {
       id = status.getId();
       params.put("id", id);
       params.put("displayOrder", status.getDisplayOrder());
@@ -172,7 +162,7 @@ public class EventService {
 
   public void deleteStatusFromEvent(Long id) {
     User currentUser = securityService.getCurrentUser();
-    HashMap<String, Object> params = new HashMap<>();
+    Map<String, Object> params = new HashMap<>();
     params.put("currentUserId", currentUser.trueUserId());
     params.put("id", id);
 
@@ -181,17 +171,18 @@ public class EventService {
 
   public void deleteCompanyEventStatus(Long id) {
     User currentUser = securityService.getCurrentUser();
-    HashMap<String, Object> params = new HashMap<>();
+    Map<String, Object> params = new HashMap<>();
     params.put("currentUserId", currentUser.trueUserId());
     params.put("id", id);
 
     sqlCache.update("event.deleteCompanyStatus", params);
   }
 
-  public Optional<EventCompanyEventStatusType> assignStatusToEvent(Long companyEventStatusTypeId, Long eventId) {
+  public Optional<EventCompanyEventStatusType> assignStatusToEvent(
+      Long companyEventStatusTypeId, Long eventId) {
     User currentUser = securityService.getCurrentUser();
 
-    HashMap<String, Object> params = new HashMap<>();
+    Map<String, Object> params = new HashMap<>();
     params.put("eventId", eventId);
     params.put("companyEventStatusTypeId", companyEventStatusTypeId);
     params.put("createdById", currentUser.trueUserId());
@@ -201,11 +192,11 @@ public class EventService {
   }
 
   public Optional<EventCompanyEventStatusType> getEventCompanyProcessStepStatusType(Long id) {
-    HashMap<String, Object> params = new HashMap<>();
+    Map<String, Object> params = new HashMap<>();
     params.put("id", id);
 
-    Optional<EventCompanyEventStatusType> result = sqlCache.get("event.getEventCompanyEventStatusType", params, EventCompanyEventStatusType.class);
-    return result;
+    return sqlCache.get(
+        "event.getEventCompanyEventStatusType", params, EventCompanyEventStatusType.class);
   }
 
   public List<CompanyEventStatusType> getAvailableStatusesForEvent(Long eventId) {
@@ -215,55 +206,64 @@ public class EventService {
     params.put("eventId", eventId);
     params.put("companyId", user.getCompanyId());
 
-    List<CompanyEventStatusType> companyEventStatusTypes = sqlCache.query("event.availableStatusesForEvent", params, CompanyEventStatusType.class);
-    return companyEventStatusTypes;
+    return sqlCache.query("event.availableStatusesForEvent", params, CompanyEventStatusType.class);
   }
 
   public List<ProcessStepEvent> getByEventId(Long eventId) {
-    return sqlCache.query("event.getProcessStepEventsByEventId", Map.of("eventId", eventId), new ProcessStepEventService.ProcessStepEventMapper<>(ProcessStepEvent.class, om));
+    return sqlCache.query(
+        "event.getProcessStepEventsByEventId",
+        Map.of("eventId", eventId),
+        new ProcessStepEventService.ProcessStepEventMapper<>(ProcessStepEvent.class, om));
   }
 
   /**
    * Get available resource owners for the given eventId
+   *
    * @param eventId
    * @return List<SystemListOption>
    */
   public List<SystemListOption> getAvailableOwners(Long eventId) {
     var companyId = securityService.getCurrentUser().getCompanyId();
-    List<Map<String, Object>> results = sqlCache.query("event.getAvailableOwners", Map.of("eventId", eventId, "companyId", companyId), new ColumnMapRowMapper());
+    List<Map<String, Object>> results =
+        sqlCache.query(
+            "event.getAvailableOwners",
+            Map.of("eventId", eventId, "companyId", companyId),
+            new ColumnMapRowMapper());
     var options = new ArrayList<SystemListOption>();
-    results.forEach(r -> {
-      options.add(new SystemListOption(Long.parseLong(r.get("id").toString()), r.get("name").toString()));
-    });
+    results.forEach(
+        r ->
+            options.add(
+                new SystemListOption(
+                    Long.parseLong(r.get("id").toString()), r.get("name").toString())));
     return options;
   }
 
-  public void saveWhiteListPositions(Long eventId, Long whiteListTypeId, List<WhiteListedPosition> whiteListedPositions) {
+  public void saveWhiteListPositions(
+      Long eventId, Long whiteListTypeId, List<WhiteListedPosition> whiteListedPositions) {
     User currentUser = securityService.getCurrentUser();
 
-    HashMap<String, Object> params = new HashMap<>();
+    Map<String, Object> params = new HashMap<>();
     params.put("userId", currentUser.trueUserId());
     params.put("companyId", currentUser.getCompanyId());
     params.put("eventId", eventId);
     params.put("whiteListTypeId", whiteListTypeId);
 
-    if(whiteListedPositions.isEmpty()) {
+    if (whiteListedPositions.isEmpty()) {
       // if white list is empty then remove all
       sqlCache.update("event.archiveWhiteListPositions", params);
     } else {
       // archive any positions no longer assigned
-      List<Long> positionIdsUsed = whiteListedPositions.stream().map(WhiteListedPosition::getPositionId).collect(Collectors.toList());
+      List<Long> positionIdsUsed =
+          whiteListedPositions.stream().map(WhiteListedPosition::getPositionId).toList();
       params.put("positionIdsUsed", positionIdsUsed);
       sqlCache.update("event.archiveUnusedWhiteListPositions", params);
 
       for (WhiteListedPosition wlp : whiteListedPositions) {
         params.put("positionId", wlp.getPositionId());
-        //this insert checks if there is already a non-archived row with the same values
+        // this insert checks if there is already a non-archived row with the same values
         sqlCache.update("event.insertWhiteListPosition", params);
       }
     }
-
-
   }
 
   public static class EventMapper<T> extends BeanPropertyRowMapper<T> {
@@ -276,26 +276,40 @@ public class EventService {
 
     @Override
     protected void initBeanWrapper(BeanWrapper bw) {
-      TypeReference<List<CustomFieldGroup>> customFieldGroupRef = new TypeReference<List<CustomFieldGroup>>() {};
-      bw.registerCustomEditor(List.class, "customFieldGroups",
-        new JsonCollectionDeserializer(customFieldGroupRef, objectMapper));
+      TypeReference<List<CustomFieldGroup>> customFieldGroupRef =
+          new TypeReference<List<CustomFieldGroup>>() {};
+      bw.registerCustomEditor(
+          List.class,
+          "customFieldGroups",
+          new JsonCollectionDeserializer(customFieldGroupRef, objectMapper));
 
-      TypeReference<List<EventCompanyEventStatusType>> companyEventStatusTypeRef = new TypeReference<List<EventCompanyEventStatusType>>() {};
-      bw.registerCustomEditor(List.class, "companyEventStatusTypes",
-        new JsonCollectionDeserializer(companyEventStatusTypeRef, objectMapper));
+      TypeReference<List<EventCompanyEventStatusType>> companyEventStatusTypeRef =
+          new TypeReference<List<EventCompanyEventStatusType>>() {};
+      bw.registerCustomEditor(
+          List.class,
+          "companyEventStatusTypes",
+          new JsonCollectionDeserializer(companyEventStatusTypeRef, objectMapper));
 
-      TypeReference<List<WhiteListedPosition>> startTimeWhiteListedPositionsRef = new TypeReference<>() {};
-      bw.registerCustomEditor(List.class, "startTimeWhiteListedPositions",
-        new JsonCollectionDeserializer(startTimeWhiteListedPositionsRef, objectMapper));
+      TypeReference<List<WhiteListedPosition>> startTimeWhiteListedPositionsRef =
+          new TypeReference<>() {};
+      bw.registerCustomEditor(
+          List.class,
+          "startTimeWhiteListedPositions",
+          new JsonCollectionDeserializer(startTimeWhiteListedPositionsRef, objectMapper));
 
-      TypeReference<List<WhiteListedPosition>> endTimeWhiteListedPositionsRef = new TypeReference<>() {};
-      bw.registerCustomEditor(List.class, "endTimeWhiteListedPositions",
-        new JsonCollectionDeserializer(endTimeWhiteListedPositionsRef, objectMapper));
+      TypeReference<List<WhiteListedPosition>> endTimeWhiteListedPositionsRef =
+          new TypeReference<>() {};
+      bw.registerCustomEditor(
+          List.class,
+          "endTimeWhiteListedPositions",
+          new JsonCollectionDeserializer(endTimeWhiteListedPositionsRef, objectMapper));
 
-      TypeReference<List<WhiteListedPosition>> resourceWhiteListedPositionsRef = new TypeReference<>() {};
-      bw.registerCustomEditor(List.class, "resourceWhiteListedPositions",
-        new JsonCollectionDeserializer(resourceWhiteListedPositionsRef, objectMapper));
+      TypeReference<List<WhiteListedPosition>> resourceWhiteListedPositionsRef =
+          new TypeReference<>() {};
+      bw.registerCustomEditor(
+          List.class,
+          "resourceWhiteListedPositions",
+          new JsonCollectionDeserializer(resourceWhiteListedPositionsRef, objectMapper));
     }
   }
-
 }
